--- a/app/views/periods/index.html.erb
+++ b/app/views/periods/index.html.erb
@@ -11,6 +11,13 @@
 
 <div class="wrapper wrapper-content animated fadeInRight">
 
+<% if flash[:mensaje].present? %>
+    <div class="alert alert-danger alert-dismissable">
+        <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
+        <%= flash[:mensaje] %>
+    </div>
+<% end %>
+
 <%= form_tag periods_path, :method => 'get' do %>
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
