fix: pdf report layout

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -1518,3 +1518,8 @@ body.mini-navbar.fixed-sidebar .logo-element {
     padding: .5rem .75rem;
   }
 }
+
+.pdf-report {
+  color: black !important;
+  background-color: white !important;
+}
