--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,7 +9,7 @@
                 <strong>Perfil</strong>
             </li>
             <li class="breadcrumb-item">
-                <a href="<%= "/profiles/#{params[:id]}/pdf.pdf" %>"> Generar PDF </a>
+                <a href="<%= "/profiles/#{params[:id]}.pdf" %>"> Generar PDF </a>
             </li>
         </ol>
     </div>
