--- a/app/views/profiles/pdf_report.html.erb
+++ b/app/views/profiles/pdf_report.html.erb
@@ -12,9 +12,10 @@
     <%= csp_meta_tag %>
 
     <!-- Main css styles -->
-    <%= wicked_pdf_stylesheet_link_tag 'style' %>
+    <%= wicked_pdf_stylesheet_link_tag 'bootstrap3' %>
+    <%= wicked_pdf_stylesheet_link_tag 'base/typography' %>
+    <%= wicked_pdf_stylesheet_link_tag 'base/base' %>
     <%= wicked_pdf_stylesheet_link_tag 'evaluations' %>
-    <%= wicked_pdf_stylesheet_link_tag 'profiles' %>
 
     <!-- Main javascript files -->
     <%= wicked_pdf_javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -22,13 +23,13 @@
 
 </head>
 <body>
-    <div>
+    <div class="pdf-report">
         <div class="container-fluid e-b">
             <div class="row">
-                <div class="col-xs-2 p-md e-b-r text-center">
-                    <%= wicked_pdf_image_tag 'logo.png', :height => '120px' %>
+                <div class="col-xs-3 p-md e-b-r text-center">
+                    <%= wicked_pdf_image_tag 'logo.png', :height => '110px' %>
                 </div>
-                <div class="col-xs-10">
+                <div class="col-xs-9">
                     <div class="row">
                         <div class="col text-center">
                             <h2><strong>PERFIL DE COMPETENCIAS</strong></h2>
@@ -41,79 +42,63 @@
         <div class="p-sm"><h2>1.- IDENTIFICACIÓN DEL PERFIL</h2></div>
         <div class="container-fluid e-b">
             <div class="row">
-                <div class="col-4 e-b-r">
+                <div class="col-xs-4 e-b-r">
                     <h3>Nombre del Perfil:</h3>
                 </div>
 
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col">
-                            <h3><%= @profile.profile %></h3>
-                        </div>
-                    </div>
+                <div class="col-xs-8">
+                    <h3><%= @profile.profile %></h3>
                 </div>
             </div>
             <div class="row e-b-t">
-                <div class="col-4 e-b-r">
+                <div class="col-xs-4 e-b-r">
                     <h3>Reporta a:</h3>
                 </div>
 
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col">
-                            <h3>
-                                <% @reports_to.each_with_index do |entry, index|%>
-                                    <% if index == 0 %>
-                                    <%= entry %>
-                                    <% else %>
-                                    / <%= entry %>
-                                    <% end %>
-                                <% end %>
-                            </h3>
-                        </div>
-                    </div>
+                <div class="col-xs-8">
+                    <h3>
+                        <% @reports_to.each_with_index do |entry, index|%>
+                            <% if index == 0 %>
+                            <%= entry %>
+                            <% else %>
+                            / <%= entry %>
+                            <% end %>
+                        <% end %>
+                    </h3>
                 </div>
             </div>
             <div class="row e-b-t">
-                <div class="col-4 e-b-r">
+                <div class="col-xs-4 e-b-r">
                     <h3>Supervisión Directa:</h3>
                 </div>
 
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col">
-                            <h3>
-                                <% @direct_supervision.each_with_index do |entry, index|%>
-                                    <% if index == 0 %>
-                                    <%= entry %>
-                                    <% else %>
-                                    / <%= entry %>
-                                    <% end %>
-                                <% end %>
-                            </h3>
-                        </div>
-                    </div>
+                <div class="col-xs-8">
+                    <h3>
+                        <% @direct_supervision.each_with_index do |entry, index|%>
+                            <% if index == 0 %>
+                            <%= entry %>
+                            <% else %>
+                            / <%= entry %>
+                            <% end %>
+                        <% end %>
+                    </h3>
                 </div>
             </div>
             <div class="row e-b-t">
-                <div class="col-4 e-b-r">
+                <div class="col-xs-4 e-b-r">
                     <h3>Es Reemplazado por:</h3>
                 </div>
 
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col">
-                            <h3>
-                                <% @replace_by.each_with_index do |entry, index|%>
-                                    <% if index == 0 %>
-                                    <%= entry %>
-                                    <% else %>
-                                    / <%= entry %>
-                                    <% end %>
-                                <% end %>
-                            </h3>
-                        </div>
-                    </div>
+                <div class="col-xs-8">
+                    <h3>
+                        <% @replace_by.each_with_index do |entry, index|%>
+                            <% if index == 0 %>
+                            <%= entry %>
+                            <% else %>
+                            / <%= entry %>
+                            <% end %>
+                        <% end %>
+                    </h3>
                 </div>
             </div>
         </div>
@@ -139,10 +124,10 @@
                 </div>
                 
                 <div class="row text-center e-b-b">
-                    <div class="col-8 e-b-r">
+                    <div class="col-xs-8 e-b-r">
                         <h3>Competencia</h3>
                     </div>
-                    <div class="col-4">
+                    <div class="col-xs-4">
                         <h3>Nivel Requerido</h3>
                     </div>
                 </div>
@@ -151,11 +136,11 @@
                 <% @profile.profile_abilities.each do |entry|%>
                     <% if entry.ability.abilities_type_id != 1 %>
                         <div class="row">
-                            <div class="col-8 e-b-r <%= contador != 0 ? "e-b-t" : "" %> vertical-center">
+                            <div class="col-xs-8 e-b-r <%= contador != 0 ? "e-b-t" : "" %> vertical-center">
                                 <h4><%= entry.ability.ability %></h4>
                             </div>
 
-                            <div class="col-4 <%= contador != 0 ? "e-b-t" : "" %> text-center vertical-center">
+                            <div class="col-xs-4 <%= contador != 0 ? "e-b-t" : "" %> text-center vertical-center">
                                 <h4><%= entry.value %></h4>
                             </div>
                         </div>
@@ -176,10 +161,10 @@
                 </div>
                 
                 <div class="row text-center e-b-b">
-                    <div class="col-8 e-b-r">
+                    <div class="col-xs-8 e-b-r">
                         <h3>Competencia</h3>
                     </div>
-                    <div class="col-4">
+                    <div class="col-xs-4">
                         <h3>Nivel Requerido</h3>
                     </div>
                 </div>
@@ -188,11 +173,11 @@
                 <% @profile.profile_abilities.each do |entry|%>
                     <% if entry.ability.abilities_type_id != 2 %>
                         <div class="row">
-                            <div class="col-8 e-b-r <%= contador != 0 ? "e-b-t" : "" %> vertical-center">
+                            <div class="col-xs-8 e-b-r <%= contador != 0 ? "e-b-t" : "" %> vertical-center">
                                 <h4><%= entry.ability.ability %></h4>
                             </div>
 
-                            <div class="col-4 <%= contador != 0 ? "e-b-t" : "" %> text-center vertical-center">
+                            <div class="col-xs-4 <%= contador != 0 ? "e-b-t" : "" %> text-center vertical-center">
                                 <h4><%= entry.value %></h4>
                             </div>
                         </div>
