fix: pdf report layout

--- a/app/views/profiles/pdf_report.html.erb
+++ b/app/views/profiles/pdf_report.html.erb
@@ -12,7 +12,7 @@
     <%= csp_meta_tag %>
 
     <!-- Main css styles -->
-    <%= wicked_pdf_stylesheet_link_tag 'bootstrap3' %>
+    <%= wicked_pdf_stylesheet_link_tag '/bootstrap3.css' %>
     <%= wicked_pdf_stylesheet_link_tag 'base/typography' %>
     <%= wicked_pdf_stylesheet_link_tag 'base/base' %>
     <%= wicked_pdf_stylesheet_link_tag 'evaluations' %>
