fix: pdf report layout

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -123,7 +123,7 @@ $(function() {
     if (gon.blandas.length === select_blandas.length)
         $("#add_association_blandas").hide()
 
-    if (gon.tecnicas.length === 1select_tecnicas.length)
+    if (gon.tecnicas.length === select_tecnicas.length)
         $("#add_association_tecnicas").hide()
 
     $("#edit_profile_<%= @profile.id %>").validate({
